--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,12 +16,17 @@
     "bootstrap": "^5.3.6",
     "compromise": "^14.14.4",
     "dayjs": "^1.11.13",
+    "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.15.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "openai": "^5.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.1",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.15.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
