--- a/my-app/package.json
+++ b/my-app/package.json
@@ -22,6 +22,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "openai": "^5.0.1",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.1",
