--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.25.3",
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.6",
     "compromise": "^14.14.4",
     "dayjs": "^1.11.13",
